--- a/src/styles/_base.css
+++ b/src/styles/_base.css
@@ -12,14 +12,16 @@ html {
 .grid-layout {
   display: grid;
   height: 100vh;
-  min-width: 320px;
-  max-width: 100vw;
+  min-height: 667px;
+  min-width: 375px;
+  grid-template-columns: [width] 100vw;
   grid-template-rows: [header] 80px [main] auto [footer] 80px;
-  margin: 0 auto;
+  margin: 0;
 }
 
 .grid-header {
   grid-row: header;
+  grid-column: width;
   display: flex;
   background-color: blue;
   justify-content: space-between;
@@ -29,7 +31,7 @@ html {
 
 .header__search {
   display: flex;
-  flex-direction: flex;
+  flex-direction: column;
   justify-content: space-between;
 }
 
@@ -42,7 +44,7 @@ html {
 
 .header__search-form {
   padding: 5px;
-  height: 20px;
+  height: 23px;
   border-radius: 5px;
   border: none;
 }
@@ -55,6 +57,7 @@ html {
 
 .grid-main {
   grid-row: main;
+  grid-column: width;
   display: flex;
   flex-direction: column;
   gap: 10px;
@@ -69,8 +72,7 @@ html {
   display: flex;
   justify-content: space-between;
   align-items: center;
-  min-width: 100vh;
-  max-width: 100vw;
+  width: 100vw;
   background-color: blue;
 }
 
@@ -92,6 +94,7 @@ html {
 
 .grid-footer {
   grid-row: footer;
+  grid-column: width;
   display: flex;
   flex-direction: row;
   background-color: red;
